--- a/Progetto-LTW-main/html_EC.html
+++ b/Progetto-LTW-main/html_EC.html
@@ -94,19 +94,19 @@
 			
 			<div class="col-4" onclick="creaNuovaPagina(this)">
 				<img src="images/prodotti/giacca_2.png">
-				<h4>Giacca 1</h4>
+				<h4>Giacca 2</h4>
 				<p>$130,00</p>
 			</div>	
 			
 			<div class="col-4" onclick="creaNuovaPagina(this)">
 				<img src="images/prodotti/giacca_3.png">
-				<h4>Giacca 1</h4>
+				<h4>Giacca 3</h4>
 				<p>$130,00</p>
 			</div>	
 			
 			<div class="col-4" onclick="creaNuovaPagina(this)">
 				<img src="images/prodotti/giacca_4.png">
-				<h4>Giacca 1</h4>
+				<h4>Giacca 4</h4>
 				<p>$130,00</p>
 			</div>	
 			
@@ -119,25 +119,25 @@
 		
 			<div class="col-4" onclick="creaNuovaPagina(this)" >
 				<img src="images/prodotti/piccozza_2.png">
-				<h4>Giacca 1</h4>
+				<h4>Piccozza 2</h4>
 				<p>$170,00</p>
 			</div>
 			
 			<div class="col-4" onclick="creaNuovaPagina(this)" >
 				<img src="images/prodotti/piccozza_1.png">
-				<h4>Giacca 1</h4>
+				<h4>Piccozza 1</h4>
 				<p>$170,00</p>
 			</div>	
 			
 			<div class="col-4" onclick="creaNuovaPagina(this)">
 				<img src="images/prodotti/giacca_4.png">
-				<h4>Giacca 1</h4>
+				<h4>Giacca 4</h4>
 				<p>$170,00</p>
 			</div>	
 			
 			<div class="col-4" onclick="creaNuovaPagina(this)">
 				<img src="images/prodotti/piccozza_3.png">
-				<h4>Giacca 1</h4>
+				<h4>Piccozza 3</h4>
 				<p>$170,00</p>
 			</div>	
 			
