--- a/ltwfinale/main/html_EC.html
+++ b/ltwfinale/main/html_EC.html
@@ -37,7 +37,7 @@
 
 			<nav>
 		   	    <ul>
-					<li><a href="https://github.com/Luca414/Progetto-LTW">Chi siamo</a> </li>
+					<li><a href="https://github.com/Luca414/Progetto-LTW.git">Chi siamo</a> </li>
 					
 					<li><a id="login" href="/login/index.html">
 						Login
