--- a/ltwfinale/c_s/prodotti.html
+++ b/ltwfinale/c_s/prodotti.html
@@ -28,8 +28,8 @@
 				<nav>
 			   	    <ul id="MenuItems">
 				    	<!-- <li> <a href="">Prodotti</a> </li>   noto che l'elenco è dentro la classe div "navbar" -->
-						<li><a href="https://github.com/Luca414/Progetto-LTW">Chi siamo</a> </li>
-						<li><a href="https://github.com/Luca414/Progetto-LTW">Contattaci</a> </li>
+						<li><a href="https://github.com/Luca414/Progetto-LTW.git">Chi siamo</a> </li>
+						<li><a href="https://github.com/Luca414/Progetto-LTW.git">Contattaci</a> </li>
 						<!-- <li><a href="">Log in</a> </li> -->
 					</ul>
 				</nav>
